argo/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argo-gateway
  # namespace: tools
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "argo-cd.rpolnx.local"
    - "argo-workflows.rpolnx.local"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: argo-cert
    hosts:
    - "argo-cd.rpolnx.local"
    - "argo-workflows.rpolnx.local"
